[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["ai/**/*.py",]

[tool.hatch.build.targets.wheel]
packages = ['ai.starlake', 'ai.starlake.job', 'ai.starlake.job.airflow', 'ai.starlake.job.airflow.bash', 'ai.starlake.job.airflow.gcp']

[project]
name = "starlake-airflow"
version = "0.0.1"
authors = [
  { name="Stéphane Mancio", email="stephane.manciot@gmail.com" },
]
license = {file = "LICENSE"}
description = "Starlake Python Distribution For Airflow"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/starlake-ai/starlake"
Issues = "https://github.com/starlake-ai/starlake/issues"
